@@ -3,6 +3,7 @@ spice (0.10.1-3) UNRELEASED; urgency=low
   * Applying for co-maintenance, adding myself to Uploaders (Closes: #671627)
   * Bump Standards-Version to 3.9.3 (no changes)
   * link-libspice-server-with-libm-libpthread.patch - missing libraries
+  * Enable multiarch for libspice-server, bump debhelper compat to 9
 
  -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 02 Jun 2012 16:18:56 +0400
 
